Se termino la gran parte de la estructura de la web y gran parte del css

--- a/index.html
+++ b/index.html
@@ -5,108 +5,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- css -->
     <link rel="stylesheet" href="style.css">
+    <!-- Place your kit's code here -->
+    <script src="https://kit.fontawesome.com/5229224c55.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav class="navbar">
-            <img class="logo" alt="img"> 
+            <img class="logo" src="./assets/img/logo.svg" alt="img" width="50px"> 
             <ul class="navbar-menu">
-                <li class="navbar-menu__item"><a>menu</a></li>
-                <li class="navbar-menu__item"><a>menu</a></li>
-                <li class="navbar-menu__item"><a>menu</a></li>
-                <li class="navbar-menu__item"><a>menu</a></li>
-                <li class="navbar-menu__item"><a>menu</a></li>
+                <li class="navbar-menu__item"><a href="#catalogo">catalogo</a></li>
+                <li class="navbar-menu__item"><a>contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="box-img">
-            <img src="" alt="foto">
+            <img src="./assets/img/carrusel1.svg" alt="foto" width="100%">
         </section>
-        <section class="box-content">
+        <section class="box-content" id="catalogo">
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
             <div class="content-item">
+                <div class="imagen"></div>
                 <div class="content-item__description">
-                    <h3>titulo</h3>
-                    <p>sadnaskjdasklasjdlkasjdlsakdjsalkdjaslas</p>
-                    <button>Agregar al carrito</button>
+                    <h3>New York Yankees - 59Fifty Cerrada</h3>
+                    <p>35$</p>
+                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
                 </div>
             </div>
         </section>
@@ -114,7 +126,7 @@
     <footer class="footerBody">
             <p><a href="">&copy;
                 2022</a></p>
-            <p class=""><a class="" href="">nombre</a></p>
+            <p class=""><a href="#header">NewEre GA - inicio</a></p>
     </footer>
     
 <script src="index.js"></script>
