Se agrego el primer algoritmo para el primer entregable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="logo" src="./assets/img/logo.svg" alt="img" width="50px"> 
             <ul class="navbar-menu">
                 <li class="navbar-menu__item"><a href="#catalogo">catalogo</a></li>
-                <li class="navbar-menu__item"><a>contacto</a></li>
+                <li class="navbar-menu__item"><a>informacion</a></li>
             </ul>
         </nav>
     </header>
