Se agrego la seccion informacion y un boton flotante

--- a/index.html
+++ b/index.html
@@ -9,118 +9,185 @@
     <link rel="stylesheet" href="style.css">
     <!-- Place your kit's code here -->
     <script src="https://kit.fontawesome.com/5229224c55.js" crossorigin="anonymous"></script>
+    <!-- AOS animate -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <header id="header">
+    <header id="header" data-aos="fade-down">
         <nav class="navbar">
             <img class="logo" src="./assets/img/logo.svg" alt="img" width="50px"> 
             <ul class="navbar-menu">
-                <li class="navbar-menu__item"><a href="#catalogo">catalogo</a></li>
-                <li class="navbar-menu__item"><a>informacion</a></li>
+                <li class="navbar-menu__item"><a href="#catalogo" class="catalogo-button">catalogo</a></li>
+                <li class="navbar-menu__item"><a href="#contacto" class="contacto-button">informacion</a></li>
             </ul>
         </nav>
     </header>
+    <aside class="button-float"><i class="fa-solid fa-cart-shopping"></i></aside>
     <main>
-        <section class="box-img">
-            <img src="./assets/img/carrusel1.svg" alt="foto" width="100%">
+        <section class="catalogo">
+            <section class="box-img" data-aos="fade-down">
+                <img src="./assets/img/carrusel1.svg" alt="foto" width="100%">
+            </section>
+            <section class="box-content" id="catalogo">
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+                <div class="content-item" data-aos="fade-up"
+                data-aos-anchor-placement="center-bottom">
+                    <div class="imagen"></div>
+                    <div class="content-item__description">
+                        <h3>New York Yankees - 59Fifty Cerrada</h3>
+                        <p>35$</p>
+                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    </div>
+                </div>
+            </section>
         </section>
-        <section class="box-content" id="catalogo">
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
+        <section class="contacto" id="contacto">
+                <section class="main__content contenedor" data-aos="fade-right">
+                    <h1 class="main__tittle fw-bold">contacto</h1>
+                <div class="contact__contenedor ">
+                    <div class="contact__form">
+                        <h3 >Contactanos</h3>
+                        <form action="">
+                            <div class="label__box">
+                                <input class="input__box" type="text" name="name" id="name" placeholder=" " autocomplete="name" required>
+                                <label class="label-box" class="" for="name">Nombre</label>
+                            </div>
+                            <div class="label__box">
+                                <input class="input__box" type="email" name="email" id="email" placeholder=" " autocomplete="email" required>
+                                <label class="label-box" for="email">Correo electronico</label>
+                            </div>
+                            <div class="label__box">
+                                <input class="input__box" type="tel" name="tel" id="tel" placeholder=" " autocomplete="tel" required>
+                                <label class="label-box" for="tel">Telefono</label>
+                            </div>
+                            <div class="label__box">
+                                <input class="input__box" type="text" name="asutno" id="asunto" placeholder=" " required>
+                                <label class="label-box" for="asunto">Asunto</label>
+                            </div>
+                            <div class="block label__box">
+                                <textarea class="input__box" name="message" id="message" placeholder=" " cols="30" rows="2"></textarea>
+                                <label class="label-box" for="message">Mensaje</label>
+                            </div>
+                            <div class="block">
+                                <button type="button">
+                                    Enviar <span class="bolaa spinner-border spinner-border-sm" role="status">
+                                    </span>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="contact__info">
+                        <h3>Mas informacion</h3>
+                        <ul>
+                            <li><i class="fa-solid fa-phone"></i>  +5491126657907</li>
+                            <li><i class="fa-solid fa-envelopes-bulk"></i>  gajose200522@gmail.com</li>
+                        </ul>
+                        <p>Esta pagina fue creada con fines educativos y practicos. Esta pagina recolecta multimedia de internet y la implementa en esta web.</p>
+
+                        <p>Soy jose gallego, nací en colombia(ibague/tolima) en el año 2005. Cree esta pagina como proyecto final para mi curso de desarrollo web en coder house, a inicios del 2022.</p>
+
+                        <p>NW-GA</p>
+                    </div>
                 </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
-            <div class="content-item">
-                <div class="imagen"></div>
-                <div class="content-item__description">
-                    <h3>New York Yankees - 59Fifty Cerrada</h3>
-                    <p>35$</p>
-                    <button><p><span>Agregar al carrito</span><i class="fa-solid fa-cart-shopping"></i></p></button>
-                </div>
-            </div>
+                </section>
         </section>
     </main>
     <footer class="footerBody">
@@ -130,5 +197,10 @@
     </footer>
     
 <script src="index.js"></script>
+<!-- AOS JS -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+ <script>
+    AOS.init();
+  </script>
 </body>
 </html>
