Se mejoro el gridLayout del catalogo

--- a/index.html
+++ b/index.html
@@ -29,112 +29,114 @@
                 <img src="./assets/img/carrusel1.svg" alt="foto" width="100%">
             </section>
             <section class="box-content" id="catalogo">
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                <div class="box-grid">
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
-                </div>
-                <div class="content-item" data-aos="fade-up"
-                data-aos-anchor-placement="center-bottom">
-                    <div class="imagen"></div>
-                    <div class="content-item__description">
-                        <h3>New York Yankees - 59Fifty Cerrada</h3>
-                        <p>35$</p>
-                        <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                    <div class="content-item" data-aos="fade-up"
+                    data-aos-anchor-placement="center-bottom">
+                        <div class="imagen"></div>
+                        <div class="content-item__description">
+                            <h3>New York Yankees - 59Fifty Cerrada</h3>
+                            <p>35$</p>
+                            <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
+                        </div>
                     </div>
                 </div>
             </section>
