Se agregaron mas articulos al css.

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
                     </div>
                     <div class="content-item" data-aos="fade-up"
                     data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
+                        <div class="imagen2"></div>
                         <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
+                            <h3>Boston Sox SS - 59Fifty Cerrada</h3>
+                            <p>37$</p>
                             <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
                     <div class="content-item" data-aos="fade-up"
                     data-aos-anchor-placement="center-bottom">
-                        <div class="imagen"></div>
+                        <div class="imagen3"></div>
                         <div class="content-item__description">
-                            <h3>New York Yankees - 59Fifty Cerrada</h3>
-                            <p>35$</p>
+                            <h3>Chicago White Sox - 59Fifty Cerrada</h3>
+                            <p>34$</p>
                             <button><p><i class="fa-solid fa-cart-shopping menos"></i><i class="fa-solid fa-cart-plus mas"></i></p></button>
                         </div>
                     </div>
